--- a/components/xsd-fu/pom.xml
+++ b/components/xsd-fu/pom.xml
@@ -37,6 +37,20 @@
 
   <build>
     <plugins>
+      <plugin>
+	<artifactId>maven-clean-plugin</artifactId>
+	<version>2.5</version>
+	<configuration>
+	  <filesets>
+	    <fileset>
+	      <directory>.</directory>
+	      <includes>
+		<include>**/*.pyc</include>
+	      </includes>
+	    </fileset>
+	  </filesets>
+	</configuration>
+      </plugin>
     </plugins>
   </build>
 
