--- a/components/specification/build.properties
+++ b/components/specification/build.properties
@@ -9,8 +9,6 @@ component.classpath      = ${artifact.dir}/specification.jar:\
                            ${artifact.dir}/bio-formats.jar:\
                            ${lib.dir}/junit-4.8.2.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/testng-6.8.jar:
 
 
@@ -23,6 +21,6 @@ component.resources-bin  =
 component.resources-text = 
 
 component.main-class     = 
-component.runtime-cp     = 
+component.runtime-cp     = ${component.classpath}
 
 testng.xml               = ${tests.dir}/unit.testng.xml
