Fixed scifio-tools pom.xml
* Updated version to 4.5-SNAPSHOT
* Corrected typo in groupId tag
* Changed dependency from loci-common to loci-legacy (loci-common is an
  empty pom project that exists for backwards compatibility)
* Added scifio-tools to top-level pom.xml so it will be included on
  top-level maven commands and imports.

--- a/components/scifio-tools/pom.xml
+++ b/components/scifio-tools/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-scifio</artifactId>
-    <version>4.4.6-SNAPSHOT</version>
+    <version>4.5-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
 
@@ -37,7 +37,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>loci-common</artifactId>
+      <artifactId>loci-legacy</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -51,7 +51,7 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupid>
+      <groupId>${project.groupId}</groupId>
       <artifactId>scifio</artifactId>
       <version>${project.version}</version>
     </dependency>
