--- a/components/scifio-tools/pom.xml
+++ b/components/scifio-tools/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-scifio</artifactId>
-    <version>4.4.6-SNAPSHOT</version>
+    <version>4.4.7-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
 
@@ -51,7 +51,7 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupid>
+      <groupId>${project.groupId}</groupId>
       <artifactId>scifio</artifactId>
       <version>${project.version}</version>
     </dependency>
