Make sure that tests are compiled before being run

--- a/components/ome-xml/build.xml
+++ b/components/ome-xml/build.xml
@@ -12,7 +12,7 @@ Type "ant -p" for a list of targets.
   <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
 
-  <target name="test" depends="jar" description="run tests">
+  <target name="test" depends="jar,compile-tests" description="run tests">
     <!-- NOTE: Overrides default "test" target from java.xml -->
     <copy tofile="${build.dir}/testng.xml" overwrite="true"
       file="${tests.dir}/ome/xml/utests/testng.xml"/>
