--- a/components/specification/build.properties
+++ b/components/specification/build.properties
@@ -11,7 +11,6 @@ component.classpath      = ${artifact.dir}/specification.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar:
 
-
 component.java-version   = 1.5
 component.deprecation    = true
 
@@ -21,6 +20,9 @@ component.resources-bin  =
 component.resources-text = 
 
 component.main-class     = 
-component.runtime-cp     = ${component.classpath}
+component.runtime-cp     = ${component.classpath}:\
+                           ${lib.dir}/xercesImpl-2.6.2.jar:\
+                           ${lib.dir}/xml-apis-1.3.02.jar:\
+                           ${lib.dir}/xml-apis-ext-1.3.02.jar:
 
 testng.xml               = ${tests.dir}/unit.testng.xml
