Add custom copy-test-source for samples folder

--- a/components/specification/build.properties
+++ b/components/specification/build.properties
@@ -26,3 +26,4 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/xml-apis-ext-1.3.02.jar:
 
 testng.xml               = ${tests.dir}/unit.testng.xml
+samples.dir              = samples/**/*
