--- a/components/autogen/build.properties
+++ b/components/autogen/build.properties
@@ -25,3 +25,6 @@ component.main-class     = MetaSupportAutogen
 component.runtime-cp     = ${component.classpath}
 
 component.meta-support-dir = ${root.dir}/components/bio-formats
+
+omexml.version=2012-06
+filelist=src/format-pages.txt
