Build fixes from Roger

--- a/ivy.xml
+++ b/ivy.xml
@@ -14,6 +14,7 @@
     <artifact name="ome-xml"/>
     <artifact name="poi-loci"/>
     <artifact name="scifio"/>
+    <artifact name="specification"/>
     <artifact name="turbojpeg"/>
   </publications>
   <dependencies defaultconfmapping="build,runtime->default">
