xsd-fu: Add -t templatepath arg and move generation to separate components

--- a/components/ome-xml/build.xml
+++ b/components/ome-xml/build.xml
@@ -10,7 +10,29 @@ Type "ant -p" for a list of targets.
   <description>Build file for OME-XML Java library project</description>
   <property name="root.dir" location="../.."/>
   <import file="${root.dir}/ant/java.xml"/>
+  <import file="${root.dir}/ant/xsd-fu.xml"/>
   <property file="build.properties"/>
+
+  <target name="generate-ome-xml">
+    <property name="xsdfu.modelpath" value="build/src/ome/xml/model"/>
+    <property name="xsdfu.enumpath" value="build/src/ome/xml/model/enums"/>
+    <property name="xsdfu.handlerpath" value="build/src/ome/xml/model/enums/handlers"/>
+
+    <!-- Generate the OME model object classes -->
+    <xsd_fu package="ome.xml.model" lang="Java" output="${xsdfu.modelpath}">
+      <arg value="java_classes"/>
+    </xsd_fu>
+
+    <!-- Generate the OME model enumeration classes -->
+    <xsd_fu package="ome.xml.model.enums" lang="Java" output="${xsdfu.enumpath}">
+      <arg value="enum_types"/>
+    </xsd_fu>
+
+    <!-- Generate the handlers for the OME model enumeration classes -->
+    <xsd_fu package="ome.xml.model.enums.handlers" lang="Java" output="${xsdfu.handlerpath}">
+      <arg value="enum_handlers"/>
+    </xsd_fu>
+  </target>
 
   <target name="test" depends="jar" description="run tests">
     <!-- NOTE: Overrides default "test" target from java.xml -->
