--- a/components/scifio/build.xml
+++ b/components/scifio/build.xml
@@ -10,7 +10,35 @@ Type "ant -p" for a list of targets.
   <description>Build file for SCIFIO project</description>
   <property name="root.dir" location="../.."/>
   <import file="${root.dir}/ant/java.xml"/>
+  <import file="${root.dir}/ant/xsd-fu.xml"/>
   <property file="build.properties"/>
+
+  <target name="generate-metadata">
+    <property name="xsdfu.metadatapath" value="build/src/loci/formats/meta"/>
+    <property name="xsdfu.omepath" value="../scifio/build/src/loci/formats/ome"/>
+
+    <!-- Generate the metadata interfaces -->
+    <xsd_fu lang="Java" output="${xsdfu.metadatapath}">
+      <arg value="metadata_store"/>
+    </xsd_fu>
+    <xsd_fu lang="Java" output="${xsdfu.metadatapath}">
+      <arg value="metadata_retrieve"/>
+    </xsd_fu>
+    <!-- Generate the metadata implementations -->
+    <xsd_fu lang="Java" output="${xsdfu.metadatapath}">
+      <arg value="metadata_aggregate"/>
+    </xsd_fu>
+    <xsd_fu lang="Java" output="${xsdfu.metadatapath}">
+      <arg value="dummy_metadata"/>
+    </xsd_fu>
+    <xsd_fu lang="Java" output="${xsdfu.metadatapath}">
+      <arg value="filter_metadata"/>
+    </xsd_fu>
+    <!-- Generate the OME XML metadata interface -->
+    <xsd_fu lang="Java" output="${xsdfu.omepath}">
+      <arg value="omexml_metadata"/>
+    </xsd_fu>
+  </target>
 
   <target name="test" depends="jar,compile-tests,test-no-ome-xml,
     test-no-lurawave, test-no-jai"
