--- a/ant/legacy.properties
+++ b/ant/legacy.properties
@@ -11,6 +11,9 @@
 # directory containing program source code
 src.dir      = ${basedir}/src
 
+# directory containing generated program source code
+gensrc.dir   = ${basedir}/target/generated-sources
+
 # directory containing source code for extra utilities
 utils.dir    = ${basedir}/utils
 
